Fixed Vertical Align of Sharing Buttons

--- a/css/styles.css
+++ b/css/styles.css
@@ -110,5 +110,5 @@ html.cannotTouch #toTop i:hover {
 
 .twitter-share-button,
 .fb-share-button {
-  vertical-align: text-bottom !important;
+  vertical-align: bottom !important;
 }
